styles.css
/* ... */
/* ----------------- GLOBAL STYLES ----------------- */

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
}

body.darkmode {
    /* Colors */
    --main-color: #EE7674;
    --main-color-light: #F3B3B2;
    --black-color-light: #696969;
    --title-color: #050505;
    --text-color: #000;
    --body-color: #EEEEEE;
    --container-color: #d6d6d6;
}

body {
    font-family: var(--body-font);
    background-color: var(--body-color);
    color: var(--text-color);
    font-size: var(--normal-font-size);
    position: relative;
    transition: background-color .4s;
}

a {
    text-decoration: none;
    color: var(--text-color);
}

li {
    list-style: none;
}

img {
    width: 100%;
}

button {
    border: none;
    outline: none;
}

/* ----------------- GLOBAL CLASSES ----------------- */

.main {
    position: relative;
}

.grid {
    display: grid;
    gap: 1.5rem;
    margin: 0 2rem;
}

.section {
    padding-block: 4rem 2rem;
}

/* ----------------- HEADER ----------------- */

.header {
    width: 100%;
    margin: 0 auto;
    background-color: var(--body-color);
}

.nav {
    position: fixed;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    padding: .9rem;
    font-size: var(--h3-font-size);
    z-index: 100;
    width: 100%;
    background-color: var(--body-color);
    transition: background-color .4s, box-shadow .4s;
}

.nav__logo {
    display: flex;
    color: var(--text-color);
    gap: 1rem;
    align-items: center;
    font-weight: var(--medium-weight);
}

.nav__icon {
    background-color: var(--main-color);
    padding: .45rem;
    border-radius: 50%;
    transition: background-color .4s;
}

.nav__icon:hover {
    background-color: var(--black-color-light);
}

.nav__name {
    font-weight: var(--bold-weight);
}

.nav__buttons {
    display: flex;
    align-items: center;
    gap: 1rem;
    cursor: pointer;
}

.menu__icon {
    background-color: var(--main-color);
    padding: .5rem;
}

.close__icon {
    display: flex;
    position: absolute;
    color: var(--white-color);
    font-size: var(--h1-font-size);
    top: -100%;
    right: 1rem;
    transition: top .4s;
    cursor: pointer;
}

.nav__list {
    display: none;
}

/* NAV MOBILE */

.nav__mobile {
    position: fixed;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: hsla(0, 0%, 0%, .85);
    top: -100%;
    width: 100%;
    padding: 1.8rem 5rem 5rem;
    gap: 2rem;
    transition: top .4s, background-color .4s;
    z-index: 100;
}

.menu__title {
    font-size: var(--small-font-size);
    color: var(--white-color);
}

.menu__name {
    position: relative;
    font-size: var(--h3-font-size);
    color: var(--white-color);
}

.menu__name::before {
    content: '';
    width: 2rem;
    background-color: var(--white-color);
    position: absolute;
    top: 50%;
    left: -3rem;
    height: 1px;
}

.menu__name::after {
    content: '';
    width: 2rem;
    background-color: var(--white-color);
    position: absolute;
    top: 50%;
    right: -3rem;
    height: 1px;
}

.menu__list {
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    text-align: center;
    font-size: var(--h3-font-size);
}

.nav__item {
    position: relative;
}

.nav__link {
    color: var(--text-color);
}

.nav__link::after {
    content: '';
    width: 0rem;
    background-color: var(--text-color);
    position: absolute;
    bottom: -25%;
    left: 0;
    height: 3px;
    transition: width .4s;
}

/* ----------------- HOME ----------------- */

.home__container {
    min-height: 85vh;
    justify-content: center;
    align-items: center;
}

.home__name {
    font-size: var(--title-size);
    align-self: flex-end;
    justify-self: center;
}

.home__perfil {
    position: relative;
    justify-self: center;
    width: 180px;
}

.home__shadow {
    position: absolute;
    top: -.75rem;
    left: .75rem;
    width: 100%;
    height: 100%;
    background-color: var(--body-color);
    border: 4px solid var(--black-color);
    z-index: -10;
}

.home__info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    text-align: center;
    justify-content: center;
    align-items: center;
    font-weight: var(--medium-weight);
    margin-top: 3rem;
}

.home__curved__arrow,
.home__random__lines {
    position: absolute;
    width: 50px;
    z-index: -100;
    filter: none;
    animation: filter .4s;
}

.home__curved__arrow {
    bottom: -4.5rem;
    left: 40%;
}

.home__random__lines {
    bottom: -1rem;
    right: -2rem;
}

.home__geometric__shadow {
    position: absolute;
    width: 25px;
    height: 25px;
    top: 2rem;
    left: -1rem;
    rotate: -35deg;
    background-color: var(--main-color);
    transition: rotate .4s;
}

.home__geometric__shadow:hover {
    rotate: -50deg;
}

.home__geometric__box {
    position: absolute;
    width: 100%;
    height: 100%;
    left: -.5rem;
    top: -.5rem;
    border: 3px solid var(--black-color);
    background-color: transparent;
}

.home__social {
    position: absolute;
    display: flex;
    height: 100%;
    flex-direction: column;
    top: 0;
    left: -4rem;
    justify-content: center;
    gap: 1rem;
}

.home__link {
    padding: .5rem;
    background-color: var(--black-color-light);
    font-size: var(--h3-font-size);
    transition: all .4s;
}

.home__link:hover {
    background-color: var(--body-color);
}

/* Scroll Button */

.home__scroll {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: .5rem;
    align-items: center;
    color: var(--main-color);
}

.home__scroll span {
    color: var(--text-color);
    font-size: var(--smallest-font-size);
}

.scroll__button {
    background-color: var(--black-color);
    width: 36px;
    height: 36px;
    display: grid;
    place-items: center;
    overflow: hidden;
}
/* ... */

